Random issue with pull-to-refresh on iOS

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -16,6 +16,12 @@
     font-style: normal;
 }
 
+/* Disable pull-to-refresh */
+body,
+html {
+    overscroll-behavior: none;
+}
+
 #app {
     @apply font-sans;
 }
